--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Find Author</title>
+	<title>Discoverly</title>
 
 </head>
-<body id="app">
+<body>
+	<div id="app">
+	</div>
 	<script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
