--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div id="app">
+		<p> test </p>
 	</div>
 	<script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
